<resources>
    <string name="app_name">app-componentes</string>
    <string name="texttituloregistro">REGISTRO DE USUARIOS</string>
    <string name="textnombres">Ingrese sus nombres</string>
    <string name="textapellidos">Ingrese sus apellidos</string>
    <string name="textgenero">Seleccione su género:</string>
    <string name="textmasculino">Masculino</string>
    <string name="textFemenino">Femenino</string>
    <string name="textotrogenero">No especifica</string>
    <string name="texthobbies">Seleccione sus hobbies:</string>
    <string name="textfutbol">Futbol</string>
    <string name="textmusica">Música</string>
    <string name="textotrohobbies">Otros</string>
    <string name="textnotificacion">¿Notificar por email?</string>
    <string name="textestadocivil">Seleccione su estado civil:</string>
    <string name="textregistro">REGISTRAR USUARIO</string>
    <string name="textverusuarios">VER USUARIOS REGISTRADOS</string>
    <string name="texttitulolistausuarios">LISTA DE USUARIOS REGISTRADOS</string>
    <string name="textregresarregistro">REGISTRAR USUARIOS</string>
</resources>